yyamamoto+sesetup@salesforce.com/src/objects/CustomObject6__c.object
<CustomObject>
    <fields>
        <fullName>Field10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>顧客</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>請求</relationshipLabel>
        <relationshipName>Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>請求締日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <label>支払期日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <formula>text(ROUND(  (Field6__c*(1-Field10__r.Field22__c))  +   ((Field6__c*(1-Field10__r.Field22__c)) *  Field5__c), 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>test</label>
        <type>Text</type>
    </fields>
    <label>請求</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>B{YYYY}{MM}{00000}</displayFormat>
        <label>請求番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>